Add python3-pyqt5.qtquick to dependencies
Change-Id: I2fe48f77cbb5549f65d3e3d94f03822cb3ba241f

--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Depends: ${misc:Depends},
          dra-chromium,
          liboxideqt-qmlplugin,
          python3-pyqt5,
+         python3-pyqt5.qtquick,
          python3-pyuserinput,
          python3-tornado,
          python3-xlib
