--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Depends: ${misc:Depends},
          ${python3:Depends},
          dra-chromium,
          liboxideqt-qmlplugin,
+         python3-dbus,
          python3-pyqt5,
          python3-pyqt5.qtquick,
          python3-pyuserinput,
