.tx/transifex: updated project name
Change-Id: If6ad572caed4c273ece63a3baad8c9825ebb9c35

--- a/.tx/config
+++ b/.tx/config
@@ -3,7 +3,7 @@ host = https://www.transifex.com
 minimum_perc = 80
 mode = developer
 
-[dde-control-center.remote-assistance]
+[deepin-desktop-environment.remote-assistancepot]
 file_filter = locale/<lang>.po
 source_lang = en
 source_file = locale/deepin-remote-assistance.pot
