--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-GPUCache/
-__pycache__/
-debian/deepin-remote-assistance/*
-debian/deepin-remote-assistance.substvars
-debian/files
+build*/
+*.pro.user*
