Add desktop file
Change-Id: I25681cfd089dbfc03c5fb6432d061ffb21f77f99

--- a/gui_port/deepin-remote-assistance.desktop
+++ b/gui_port/deepin-remote-assistance.desktop
@@ -3,7 +3,7 @@ Categories=Application;Network;
 Comment=Deepin Remote Assistance
 Encoding=UTF-8
 Exec=/usr/bin/remote-assistance
-Icon=preferences-system
+Icon=deepin-remote-assistance 
 Name=Remote Assistance
 OnlyShowIn=Deepin
 StartupNotify=false
