Fix tx config error
Change-Id: Ic4943450197c2b23b6745b6d3c18e2e563d61fa0

--- a/.tx/config
+++ b/.tx/config
@@ -12,7 +12,7 @@ type = PO
 
 ; the gui part
 [deepin-desktop-environment.deepin-remote-assistant_gui]
-file-filter = gui_port/translations/deepin-remote-assistance_<lang>.ts
+file_filter = gui_port/translations/deepin-remote-assistance_<lang>.ts
 source_lang = en
 source_file = gui_port/translations/deepin-remote-assistance.ts
 type = QT
