--- a/debian/control
+++ b/debian/control
@@ -20,5 +20,7 @@ Depends: ${misc:Depends},
          python3-pyqt5.qtquick,
          python3-pyuserinput,
          python3-tornado,
-         python3-xlib
+         python3-xlib,
+         qml-module-qtquick-controls,
+         qml-module-qtquick-dialogs,
 Description: Deepin Remote Assistance
